--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 </header>
 
 <section class="intro">
-    <p>Hello! I’m [Your Name], a passionate software developer who loves building cool things with code. I enjoy solving problems, learning new technologies, and sharing knowledge with others. Welcome to my personal homepage!</p>
+    <p>Hello! I’m Anotherbricki, a passionate software developer who loves building cool things with code. I enjoy solving problems, learning new technologies, and sharing knowledge with others. Welcome to my personal homepage!</p>
 </section>
 
 <div class="container">
@@ -138,6 +138,7 @@
 
     <div class="card">
         <h3>Skills</h3>
+        <p>JavaScript, React, Node.js, Python, CSS, HTML, Git, SQL, Firebase, APIs, Web Development, Software Design</p>
     </div>
 
     <div class="card">
